<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/device_date_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/device_date_setting" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/device_date_setting_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/device_info_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/device_info_setting" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/device_info_setting_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/device_display_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/device_display_setting" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/device_display_setting_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/battery_saver_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/battery_save_setting" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/battery_saver_setting_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/development_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/development_setting" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/development_setting_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/device_setting" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/setting_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false" />

        </LinearLayout>

        <Button
            android:id="@+id/button_app_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="アプリ一覧"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</ScrollView>
